@@ -5,7 +5,7 @@ import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.quiz.ourclass.global.exception.ErrorCode;
 import com.quiz.ourclass.global.exception.GlobalException;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.UUID;
 import lombok.Data;
 import lombok.extern.log4j.Log4j2;
@@ -39,9 +39,9 @@ public class AwsS3ObjectStorage {
     public int deleteFile(String fileUrl) {
         try {
             // URL에서 객체 키 추출
-            URL url = new URL(fileUrl);
+            URI uri = new URI(fileUrl);
             // URL의 첫 번째 '/'를 제거하여 객체 키 얻기
-            String key = url.getPath().substring(1);
+            String key = uri.getPath().substring(1);
 
             // 파일 존재 여부 확인
             if (amazonS3.doesObjectExist(bucket, key)) {
